# dual-pose-graph

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cliff.toml  pixi.toml
.github/workflows/: ci.yaml  release.yaml
cmake/: FindG2O.cmake  dual_pose_graphConfig.cmake.in
examples/: CMakeLists.txt  minimal_example.cpp
include/dual_pose_graph/: graph_edge_types.hpp  graph_g2o.hpp  graph_node_types.hpp  object_detection_types.hpp  optimizer_g2o.hpp
include/dual_pose_graph/utils/: conversions.hpp  csv_logger.hpp  general_utils.hpp
src/: conversions.cpp  graph_g2o.cpp  graph_node_types.cpp  optimizer_g2o.cpp
tests/: CMakeLists.txt  test_conversions.cpp  test_covariance_extraction.cpp  test_coverage_edges.cpp  test_csv_logger.cpp  test_custom_detection_extension.cpp  test_fixed_objects.cpp  test_graph_g2o.cpp  test_graph_g2o_objects.cpp  test_graph_node_defaults.cpp  test_node_absolute_detection.cpp  test_object_detection.cpp  test_object_detection_relative.cpp  test_optimizer_advanced.cpp  test_optimizer_detection_generic.cpp  test_optimizer_dual_graph.cpp  test_optimizer_odom.cpp  test_optimizer_reject_invalid.cpp  test_optimizer_transforms.cpp  test_temp_to_main_merge.cpp
